# testuserapi_tz

./: README.md  docker-compose.yml
config/local/: env.example  pyproject.toml  start_app.sh  start_format.sh  start_lint.sh  start_tests.sh
src/: .isort.cfg  check_db.py  manage.py  mypy.ini
src/apps/docs/: urls.py
src/apps/users/: admin.py  fields.py  managers.py  models.py  serializers.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py  0002_color_user_favourite_colors.py
src/testuserapi/: asgi.py  urls.py  urls_v1.py  wsgi.py
src/testuserapi/common/: pagination.py
src/testuserapi/common/auth/: backends.py
src/testuserapi/settings/: __init__.py  api.py  app.py  base.py  cors.py  database.py  docs.py  installed_apps.py  localization.py  middleware.py  password.py
